# 42_call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: functions_definition.json
error/: error.py
function_definintion/: function_definition.py  model.py
llm_wrapper/: llm_wrapper.py
manager/: constraint.py  constraint_attribute.py  constraint_function.py  manager.py  manager_attribute.py  manager_function.py
models/: function_definition.py  output.py  prompt.py
src/: __main__.py
src/error/: error.py
src/llm_wrapper/: llm_wrapper.py
src/models/: function_definition.py  output.py  prompt.py
src/talker/: attribute.py  constraint_function.py  function.py  talker.py
src/utils/: parser_call_me.py  utils.py
utils/: utils.py
