[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Does LLMs speak the language of computers? We’ll find out."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "termcolor>=3.3.0",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
